# command-palette-widget

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
example/: CMakeLists.txt  main.cpp
include/CommandPaletteWidget/: CommandPalette  commandpalette.h
src/: commandpalette.cpp  commandpalette.h
